# TetriQ

./: .clang-format  .gitignore  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  README.md  tetriq.ansi
.github/workflows/: doxygen.yml  manual.yml  reuse.yml
.reuse/: dep5
client/: CMakeLists.txt
client/include/: Arguments.hpp  Client.hpp  ClientConfig.hpp  IDisplay.hpp  RemoteTetris.hpp  SFMLDisplay.hpp  ViewerTetris.hpp  client.hpp
client/include/displays/: DisplayFactory.hpp  IDisplay.hpp  NcursesDisplay.hpp  SFMLDisplay.hpp
client/src/: Arguments.cpp  Client.cpp  ClientConfig.cpp  ClientExceptions.cpp  RemoteTetris.cpp  SFMLDisplay.cpp  ViewerTetris.cpp  main.cpp
client/src/displays/: DisplayFactory.cpp  NcursesDisplay.cpp  SFMLDisplay.cpp
cmake/: FindENet.cmake
common/: CMakeLists.txt
common/include/: AConfig.hpp  Block.hpp  GameAction.hpp  GameConfig.hpp  ITetris.hpp  Logger.hpp  Messages.hpp  Network.hpp  Tetris.hpp  Tetromino.hpp  Utils.hpp
common/include/network/: APacket.hpp  IPacket.hpp  NetworkObject.hpp  NetworkStream.hpp  PacketHandler.hpp  PacketId.hpp  TestPacket.hpp
common/include/network/packets/: ConnectPacket.hpp  DisconnectPacket.hpp  FullGamePacket.hpp  FullGameRequestPacket.hpp  GameActionPacket.hpp  InitGamePacket.hpp  PowerUpPacket.hpp  TestPacket.hpp  TickGamePacket.hpp
common/src/: AConfig.cpp  Block.cpp  Logger.cpp  PacketHandler.cpp  Tetris.cpp  Tetromino.cpp  Utils.cpp
common/src/network/: APacket.cpp  NetworkStream.cpp  PacketHandler.cpp  TestPacket.cpp
common/src/network/packets/: ConnectPacket.cpp  DisconnectPacket.cpp  FullGamePacket.cpp  FullGameRequestPacket.cpp  InitGamePacket.cpp  PowerUpPacket.cpp  TestPacket.cpp  TickGamePacket.cpp
common/src/packets/: GameActionPacket.cpp  InitGamePacket.cpp  TickGamePacket.cpp
doc/: .gitignore  book.toml
doc/src/: SUMMARY.md  building.md  client_configuration.md  gfdl.md  introduction.md  protocol.md  rcon_usage.md  server_configuration.md  usage.md
etc/: Doxyfile  OpenSans-SemiBold.ttf.license  client.toml  server.toml
etc/textures/: green.png.license
server/: CMakeLists.txt
server/include/: Channel.hpp  Player.hpp  Rcon.hpp  RconConfig.hpp  Server.hpp  ServerConfig.hpp  ServerManager.hpp  server.hpp
server/include/rcon/: CommandHandler.hpp  Rcon.hpp
server/src/: Channel.cpp  GameConfig.cpp  Player.cpp  Rcon.cpp  RconConfig.cpp  Server.cpp  ServerConfig.cpp  ServerExceptions.cpp  ServerManager.cpp  main.cpp
server/src/rcon/: CommandHandler.cpp  Rcon.cpp
